--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,10 @@
 export(SOP_from_matrix_list)
 export(compute_sop)
 export(compute_transition_probabilities)
+export(compute_transition_probabilitiesC)
 export(create_survival)
 export(generate_dataset)
+export(generate_datasetC)
+export(generate_record)
+importFrom(Rcpp,sourceCpp)
+useDynLib(otm, .registration = TRUE)
