--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,10 @@
 
 export(SOP_from_matrix_list)
 export(compute_sop)
+export(compute_transition_matrix)
 export(compute_transition_probabilities)
-export(compute_transition_probabilitiesC)
 export(create_survival)
 export(generate_dataset)
-export(generate_datasetC)
-export(generate_record)
+export(generate_sop_plot)
 importFrom(Rcpp,sourceCpp)
 useDynLib(otm, .registration = TRUE)
