--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,11 +14,14 @@ Suggests:
 Config/testthat/edition: 3
 Imports: 
     cowplot,
+    data.table,
     dplyr,
     ggplot2,
     patchwork,
     purrr,
     Rcpp,
-    reshape2
+    reshape2,
+    VGAM,
+    waldo
 LinkingTo: 
     Rcpp
